--- a/python/example/vivekn-sentiment/sentiment.ipynb
+++ b/python/example/vivekn-sentiment/sentiment.ipynb
@@ -9,30 +9,13 @@
    "outputs": [],
    "source": [
     "#Imports\n",
+    "import time\n",
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
     "from pyspark.ml import Pipeline, PipelineModel\n",
     "from sparknlp.annotator import *\n",
     "from sparknlp.base import DocumentAssembler, Finisher\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from pyspark.sql import SparkSession\n",
-    "\n",
-    "spark = SparkSession.builder \\\n",
-    "    .master(\"local[2]\") \\\n",
-    "    .config(\"spark.jar\", \"lib/sparknlp.jar\") \\\n",
-    "    .config(\"spark.driver.memory\", \"5g\")\\\n",
-    "    .config(\"spark.dirver.maxResultSize\", \"2g\")\\\n",
-    "    .getOrCreate()"
    ]
   },
   {
@@ -121,7 +104,10 @@
     "### Spell Checker\n",
     "spell_checker = NorvigSweetingApproach() \\\n",
     "            .setInputCols([\"normal\"]) \\\n",
-    "            .setOutputCol(\"spell\")\n",
+    "            .setOutputCol(\"spell\") \\\n",
+    "            .setCorpusPath(\"./corpus/pos\")\n",
+    "            #.setDictPath(\"/home/saif/IdeaProjects/spark-nlp/src/main/resources/spell/words.txt\") \\\n",
+    "            #.setCorpusFormat(\"TXTDS\")\n",
     "\n",
     "#checked = spell_checker.fit(tokenized).transform(tokenized)"
    ]
@@ -137,9 +123,22 @@
     "sentiment_detector = ViveknSentimentApproach() \\\n",
     "    .setInputCols([\"spell\", \"sentence\"]) \\\n",
     "    .setOutputCol(\"sentiment\") \\\n",
+    "    .setPruneCorpus(False) \\\n",
     "    .setPositiveSource(\"../../../src/test/resources/vivekn/positive\") \\\n",
-    "    .setNegativeSource(\"../../../src/test/resources/vivekn/negative\") \\\n",
-    "    .setPruneCorpus(False)\n"
+    "    .setNegativeSource(\"../../../src/test/resources/vivekn/negative\") \\\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pos = PerceptronApproach() \\\n",
+    "    .setInputCols([\"sentence\", \"spell\"]) \\\n",
+    "    .setOutputCol(\"pos\")"
    ]
   },
   {
@@ -168,11 +167,15 @@
     "    normalizer,\n",
     "    spell_checker,\n",
     "    sentiment_detector,\n",
+    "    pos,\n",
     "    finisher\n",
     "])\n",
     "\n",
+    "start = time.time()\n",
     "sentiment_data = pipeline.fit(data).transform(data)\n",
-    "sentiment_data.show()"
+    "sentiment_data.show()\n",
+    "end = time.time()\n",
+    "print(\"Time elapsed pipeline process: \" + str(end - start))"
    ]
   },
   {
@@ -188,24 +191,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "start = time.time()\n",
     "pipeline.write().overwrite().save(\"./ps\")\n",
-    "pipeline.fit(data).write().overwrite().save(\"./ms\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from pyspark.ml import Pipeline,PipelineModel"
+    "pipeline.fit(data).write().overwrite().save(\"./ms\")\n",
+    "end = time.time()\n",
+    "print(\"Time elapsed writing pipelines: \" + str(end - start))"
    ]
   },
   {
@@ -214,8 +207,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Pipeline.read().load(\"./ps\")\n",
-    "PipelineModel.read().load(\"./ms\")"
+    "start = time.time()\n",
+    "p = Pipeline.read().load(\"./ps\")\n",
+    "pm = PipelineModel.read().load(\"./ms\")\n",
+    "end = time.time()\n",
+    "print(\"Time elapsed in read pipelines: \" + str(end - start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = time.time()\n",
+    "#pm.transform(data).where(\"finished_sentiment not like '%negative%'\").show()\n",
+    "pm.transform(data).show()\n",
+    "print(pm.transform(data).count())\n",
+    "end = time.time()\n",
+    "print(\"Time elapsed in using loaded pipelines: \" + str(end - start))"
    ]
   },
   {
