--- a/python/example/clean-stop-words/Clean Stop Words.ipynb
+++ b/python/example/clean-stop-words/Clean Stop Words.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clean Stop Words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This pipeline shows how to remove stop words from a text"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -49,18 +63,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+--------------------+--------------------+\n",
-      "|                text|               token|            filtered|\n",
-      "+--------------------+--------------------+--------------------+\n",
-      "|I saw a girl with...|[I, saw, a, girl,...|[saw, girl, teles...|\n",
-      "+--------------------+--------------------+--------------------+\n",
+      "+-----------------------------+-------------------------------------+----------------------+\n",
+      "|text                         |token                                |filtered              |\n",
+      "+-----------------------------+-------------------------------------+----------------------+\n",
+      "|I saw a girl with a telescope|[I, saw, a, girl, with, a, telescope]|[saw, girl, telescope]|\n",
+      "+-----------------------------+-------------------------------------+----------------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
     "result_df = pipeline.transform(spark_dataframe)\n",
-    "result_df.show()"
+    "result_df.show(1, False)"
    ]
   },
   {
