--- a/python/example/match-phrases/Match Phrases.ipynb
+++ b/python/example/match-phrases/Match Phrases.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Match Phrases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This pipeline matches phrases from a text"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,41 +45,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = '/Users/dburbano/IdeaProjects/spark-nlp-models/tmp/match_phrases_en_1.8.0_2.4_1552616116195'\n",
+    "model_path = '/Users/dburbano/IdeaProjects/spark-nlp-models/tmp/match_phrases_en_1.8.0_2.4_1552678072382'\n",
     "pipeline = PipelineModel.load(model_path)\n",
-    "spark_dataframe = spark.createDataFrame([['Hello dolore magna aliqua. Lorem ipsum dolor. sit in laborum']]).toDF(\"text\")"
+    "spark_dataframe = spark.createDataFrame([['The most troublesome report may be the August merchandise trade deficit due out tomorrow']]).toDF(\"text\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+--------------------+--------------------+--------------------+--------------------+\n",
-      "|                text|            document|            sentence|               token|              entity|\n",
-      "+--------------------+--------------------+--------------------+--------------------+--------------------+\n",
-      "|Hello dolore magn...|[[document, 0, 59...|[[document, 0, 25...|[[token, 0, 4, He...|[[chunk, 6, 24, d...|\n",
-      "+--------------------+--------------------+--------------------+--------------------+--------------------+\n",
+      "+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "|entity                                                                                                                                                                     |\n",
+      "+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "|[[chunk, 9, 19, troublesome, [sentence -> 0], [], []], [chunk, 46, 62, merchandise trade, [sentence -> 0], [], []], [chunk, 76, 87, out tomorrow, [sentence -> 0], [], []]]|\n",
+      "+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
     "result_df = pipeline.transform(spark_dataframe)\n",
-    "result_df.show()"
+    "result_df.select('entity').show(1, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
