--- a/python/example/clean-stop-words/Clean Stop Words.ipynb
+++ b/python/example/clean-stop-words/Clean Stop Words.ipynb
@@ -20,17 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "from pyspark.sql import SparkSession\n",
-    "\n",
-    "sys.path.append(\"/Users/dburbano/IdeaProjects/spark-nlp/python\")\n",
-    "spark = SparkSession.builder \\\n",
-    "    .appName(\"test\")\\\n",
-    "    .master(\"local[4]\")\\\n",
-    "    .config(\"spark.driver.memory\",\"4G\")\\\n",
-    "    .config(\"spark.driver.maxResultSize\", \"2G\") \\\n",
-    "    .config(\"spark.jars\", \"/Users/dburbano/IdeaProjects/spark-nlp/python/lib/sparknlp.jar\")\\\n",
-    "    .getOrCreate()"
+    "import sparknlp"
    ]
   },
   {
@@ -39,7 +29,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sparknlp.annotator import *\n",
     "from sparknlp.base import *"
    ]
   },
@@ -49,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = '/Users/dburbano/IdeaProjects/spark-nlp-models/tmp/clean_stop_words_en_1.8.0_2.4_1552606190617'\n",
+    "model_path = 'models/clean_stop_words'\n",
     "pipeline = PipelineModel.load(model_path)\n",
     "spark_dataframe = spark.createDataFrame([['I saw a girl with a telescope']]).toDF(\"text\")"
    ]
