--- a/python/example/match-phrases/Match Phrases.ipynb
+++ b/python/example/match-phrases/Match Phrases.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = light_pipeline.annotate('I saw a girl with a telescope')"
+    "result = light_pipeline.annotate('The most troublesome report may be the August merchandise trade deficit due out tomorrow')"
    ]
   }
  ],
